--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Organizer</h3>
               <div class="subheading mb-3">BASIS STUDENTS FORUM</div>
-              <p>As a part of a team my task was to spread the information about the program, the purpose of the event, monitoring the whole program, which was held on United International University in 2016. </p>
+              <p>As a part of the organizer's team my task was to spread the information about the program, the purpose of the event, monitoring the whole program, which was held on United International University in 2016. </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2016</span>
