--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h1 class="mb-0">Md. Sirazul
             <span class="text-primary">Munir</span>
           </h1>
-          <div class="subheading mb-5">Darogabari ,Satarkul Road, Badda. Dhaka-1212. (+88) 0177-4098177 ·
+          <div class="subheading mb-5">House#18(2nd Floor), Arjotpara, Mohakhali, Dhaka-1206. (+88) 0177-4098177 ·
             <a href="mailto:msirazulmunir@gmail.com">msirazulmunir4@gmail.com</a>
           </div>
           <p class="mb-5">To gain confidence and fame using my potential in the field of “Web Development”, and express my innovative creative skills for self and company growth. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
@@ -120,7 +120,7 @@
               <h3 class="mb-0">United International University</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science & Engineering</div>
-              <p>GPA: 2.87</p>
+              <p>GPA: 2.90</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2014 - December 2018</span>
