--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="subheading mb-5">House#18(2nd Floor), Arjotpara, Mohakhali, Dhaka-1206. (+88) 0177-4098177 ·
             <a href="mailto:msirazulmunir@gmail.com">msirazulmunir4@gmail.com</a>
           </div>
-          <p class="mb-5">To gain confidence and fame using my potential in the field of “Web Development”, and express my innovative creative skills for self and company growth. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">To grow along with the organization and become a professional of excellent repute by effectively contributing towards the goal of the organization.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/sirazulmunir1">
