--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Easy Rent</h3>
+              <h3 class="mb-0">Rent A Car</h3>
               <div class="subheading mb-3">Java Project</div>
               <div>JavaFx, CSS</div>
             </div>
@@ -302,7 +302,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. I love travelling and exploring world.Helping people makes me happy.</p>
+          <p>I enjoy most of my time being outdoors. I love travelling and exploring world.Helping people makes me happy.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
         </div>
       </section>
