--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">United International University</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
