--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
-          <h2 class="mb-5">Academic Projects</h2>
+          <h2 class="mb-5">Projects</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
