--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">UIU CSE Community</h3>
               <div class="subheading mb-3">Software Project</div>
-              <div>HTML,CSS,JavaScript,Ajax,PhP,Bootstrap,MySql</div>
+              <div>Tools: HTML,CSS,JavaScript,Ajax,PhP,Bootstrap,MySql</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">February 2018 - May 2018</span>
