--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Criminal Record</h3>
               <div class="subheading mb-3">Database Project</div>
-              <div>HTML,CSS,PhP,Ajax,Bootstrap,MySql</div>
+              <div>Tools: HTML,CSS,PhP,Ajax,Bootstrap,MySql</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2017 - September 2017</span>
