--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Rent A Car</h3>
               <div class="subheading mb-3">Java Project</div>
-              <div>JavaFx, CSS</div>
+              <div>Tools: Java,JavaFx, CSS</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2016 - December 2016</span>
