--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">UIU CSE Community</h3>
               <div class="subheading mb-3">Software Project</div>
+              <div>Description: A service which ensures better communication among students, teachers and alumni member within a specific institution with lots of opportunity news. </div>
               <div>Tools: HTML,CSS,JavaScript,Ajax,PhP,Bootstrap,MySql</div>
             </div>
           </div>
