--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <div class="subheading mb-3">Software Project</div>
               <div><b>Description:</b> A service which ensures better communication among students, teachers and alumni member within a specific institution with lots of opportunity news.</div><br>
               <div><b>Tools:</b> HTML,CSS,JavaScript,Ajax,PhP,Bootstrap,MySql</div>
-              <div><b>Link:</b> <a href="https://github.com/sirazulMunir/uiuCseCommunity">Code</a></div>
+              <div><b>Link:</b> <a href="https://github.com/sirazulMunir/uiuCseCommunity">https://github.com/sirazulMunir/uiuCseCommunity</a></div>
             </div>
           </div>
 
