--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Criminal Record</h3>
               <div class="subheading mb-3">Database Project</div>
-              <div>Tools: HTML,CSS,PhP,Ajax,Bootstrap,MySql</div>
+              <div><b>Description:</b> Database centric project that provides well organized informatics view both police and plaintiff to ease their informatic service.</div><br>
+              <div>Tools: PHP, HTML, CSS, MySQL, Bootstrap, Java Script and Ajax</div>
+              <div><b>Link:</b> <a href="https://github.com/sirazulMunir/CriminalRecord">https://github.com/sirazulMunir/CriminalRecord</a></div>
             </div>
           </div><br>
 
