--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <h3 class="mb-0">Criminal Record</h3>
               <div class="subheading mb-3">Database Project</div>
               <div><b>Description:</b> Database centric project that provides well organized informatics view both police and plaintiff to ease their informatic service.</div><br>
-              <div>Tools: PHP, HTML, CSS, MySQL, Bootstrap, Java Script and Ajax</div>
+              <div><b>Tools:</b> PHP, HTML, CSS, MySQL, Bootstrap, Java Script and Ajax</div>
               <div><b>Link:</b> <a href="https://github.com/sirazulMunir/CriminalRecord">https://github.com/sirazulMunir/CriminalRecord</a></div>
             </div>
           </div><br>
@@ -236,7 +236,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Rent A Car</h3>
               <div class="subheading mb-3">Java Project</div>
-              <div>Tools: Java,JavaFx, CSS</div>
+              <div><b>Description:</b> Convenient interface to provide a range of cars details and related important information to build a transparent transition among seller and buyer.</div><br>
+              <div>Tools: Java,JavaFx,CSS</div>
+              <div><b>Link:</b> <a href="https://github.com/sirazulMunir/RentACar">https://github.com/sirazulMunir/RentACar</a></div>
             </div>
           </div>
 
