--- a/index.html
+++ b/index.html
@@ -237,8 +237,17 @@
               <h3 class="mb-0">Rent A Car</h3>
               <div class="subheading mb-3">Java Project</div>
               <div><b>Description:</b> Convenient interface to provide a range of cars details and related important information to build a transparent transition among seller and buyer.</div><br>
-              <div>Tools: Java,JavaFx,CSS</div>
+              <div><b>Tools:</b> Java,JavaFx,CSS</div>
               <div><b>Link:</b> <a href="https://github.com/sirazulMunir/RentACar">https://github.com/sirazulMunir/RentACar</a></div>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Network Intrusion Classification with Feature Reduction</h3>
+              <div class="subheading mb-3">Thesis</div>
+              <div><b>Description:</b> Big data-based thesis where intrusion has to detect with various classifier and has to reduce the space complexity with the help of feature selection algorithm.</div><br>
+              <div><b>Tools:</b> Python, Weka, Scikit-Learn</div>
             </div>
           </div>
 
