--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               <div><b>Tools:</b> Java,JavaFx,CSS</div>
               <div><b>Link:</b> <a href="https://github.com/sirazulMunir/RentACar">https://github.com/sirazulMunir/RentACar</a></div>
             </div>
-          </div>
+          </div><br>
           
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
