--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <i class="devicons devicons-bootstrap"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
+              <i class="devicon-laravel-plain"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-photoshop"></i>
