--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
               <i class="devicon-laravel-plain"></i>
             </li>
             <li class="list-inline-item">
+              <i class="devicon-android-plain"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-photoshop"></i>
             </li>
           </ul>
