--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>I enjoy most of my time being outdoors. I love travelling and exploring world.Helping people makes me happy.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in coding world.</p>
         </div>
       </section>
 
